# crafting-interpreters

./: README.md
challenges/: chapter02_map.md  chapter03_lox.md  chapter04_scanning.md  chapter05_representing.md  chapter06_parsing.md  chapter14_chunks.md
challenges/chapter01_introduction/: README.md
challenges/chapter01_introduction/3/: CMakeLists.txt
challenges/chapter01_introduction/3/src/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c
clox/: .clang-format  CMakeLists.txt
clox/src/: CMakeLists.txt  chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  line.c  line.h  main.c  scanner.c  scanner.h  token.h  value.c  value.h  vm.c  vm.h
jlox/src/: lox.rs  main.rs  parser.rs  scanner.rs  syntax.rs  token.rs
notes/: README.md  garbage_collection.md  ir_styles.md  optimizations.md
